# RvA

./: .gitignore  README.md  RvA.sln
RvA/: .clang-format  CMakeLists.txt  RvA.vcxproj  RvA.vcxproj.filters  build_web.bat  template.html
RvA/assets/: atlas.map  genAtlas.py  generateAtlas.bat  split_image.bat  split_image.py
RvA/assets/config/: options.json
RvA/assets/shaders/: highlight.fs  hole_shader.fs
RvA/config/: options.json
RvA/src/: Animation.cpp  Animation.h  Config.cpp  Config.h  CreditsHelper.cpp  CreditsHelper.h  Damage.h  FixedItemPool.h  Game.cpp  Game.h  GameAction.h  GameRegistry.cpp  GameRegistry.h  IGameState.h  LevelDefinition.cpp  LevelDefinition.h  MusicManager.cpp  MusicManager.h  ResourceSystem.cpp  ResourceSystem.h  Session.cpp  Session.h  constants.cpp  constants.h  main.cpp  utilities.cpp  utilities.h
RvA/src/GUI/: FadeScreen.cpp  FadeScreen.h  GUI.cpp  GUI.h  GUIHelper.cpp  GUIHelper.h  GUIStyle.h  HUD.cpp  HUD.h  LayoutHelper.cpp  LayoutHelper.h  Widgets.cpp  Widgets.h
RvA/src/atlas/: Atlas.cpp  Atlas.h
RvA/src/bullet/: Bullet.h  BulletManager.cpp  BulletManager.h  BulletTypeRegistry.cpp  BulletTypeRegistry.h  BulletTypes.h  LasertronBullet.cpp  LasertronBullet.h  ShooterBullet.cpp  ShooterBullet.h
RvA/src/collisions/: Collider.h  CollisionSystem.cpp  CollisionSystem.h
RvA/src/defender/: Defender.cpp  Defender.h  DefenderManager.cpp  DefenderManager.h  DefenderPicker.cpp  DefenderPicker.h  DefenderTypeRegistry.cpp  DefenderTypeRegistry.h  DefenderTypes.h
RvA/src/fsm/: Fsm.cpp  (+9 more)
RvA/src_assets/: atlas.map  generateAtlas.bat
(+60 files in other folders)
